--- a/app/styles/documents/uploadDropdown.module.css
+++ b/app/styles/documents/uploadDropdown.module.css
@@ -25,7 +25,7 @@
 .dropdownItem {
     padding: 10px;
     border: none;
-    background: #C6E7E7 ;
+    background: #fff ;
     text-align: left;
     font-size: 14px;
     cursor: pointer;
@@ -34,10 +34,13 @@
     gap: 10px;
     color: #000000;
 }
+.dropdownItem:hover {
+    background: #f0f0f0;
+}
 
 .addButton {
     align-self: flex-start;
-    background-color: #ff7211;
+    background-color: #2bb3d2;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -51,7 +54,7 @@
 }
 
 .addButton:hover {
-    background-color: #1b9392;
+    background-color: #22a0c1;
 }
 .uploadFileButton {
     background: #C6E7E7;
