--- a/app/styles/project/report/report.module.css
+++ b/app/styles/project/report/report.module.css
@@ -136,12 +136,9 @@
   transition: width 0.3s ease;
 }
 .sectionTitle {
-  font-size: 1.4rem;
-  font-weight: bold;
+  font-size: 16px;
+  font-weight: 600;
   margin-bottom: 8px;
   color: #333;
-  padding: 20px;
-}
-.section{
-  margin-bottom: 20px;
+  padding-top: 30px;
 }
