--- a/app/styles/students/addStudent/addStudent.module.css
+++ b/app/styles/students/addStudent/addStudent.module.css
@@ -152,15 +152,27 @@
   margin-top: 10px;
   border-collapse: collapse;
 }
-
-.table th, .table td {
+.table th{
+   padding: 10px;
+   border: 1px solid #ccc;
+    color: #ffffff;
+}
+ .table td {
   padding: 10px;
-  border: 1px solid white;
-  color: white;
+  border: 1px solid #ccc;
+  color: #000000;
 }
 
 .table th {
-  background: darkcyan;
+  background: #2bb3d2;
+}
+.table button {
+  background-color: #f83f26;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 
